Fix article section having an extra gap

--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -5,9 +5,8 @@
 
 .container {
   display: grid;
-  grid-template: 1fr 0.5fr 4fr 0.5fr / 1fr 5fr;
+  grid-template: 1fr 0.5fr 5fr 0.5fr / 1fr 5fr;
   text-align: center;
-  height: 100vh;
 }
 
 .container div {
@@ -91,7 +90,7 @@
   background-color: #bccbde;
   grid-area: 3 / 2 / 3 / 6;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px
+  gap: 15px
 }
 
 .article p {
